src/render/blob/snapshots/webgit__render__blob__tests__blob_html.snap
---
source: src/render/blob.rs
expression: "render(b\"fn main() {\\n    println!(\\\"hello\\\");\\n}\\n\")"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/blame/file.txt" class="blame-link">blame</a>
</div>
<table class="blob-table">
<tbody>
<tr id="n1">
<td class="lno">
<a href="#!/tree/file.txt#n1" data-n="1">1</a>
</td>
<td class="code">fn main() {</td>
</tr>
<tr id="n2">
<td class="lno">
<a href="#!/tree/file.txt#n2" data-n="2">2</a>
</td>
<td class="code">    println!("hello");</td>
</tr>
<tr id="n3">
<td class="lno">
<a href="#!/tree/file.txt#n3" data-n="3">3</a>
</td>
<td class="code">}</td>
</tr>
</tbody>
</table>
