src/render/blob/snapshots/webgit__render__blob__tests__blob_html_image_ssr_omits_img.snap
---
source: src/render/blob.rs
expression: "render_path(\"logo.png\", PNG)"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391</div>
