src/render/blob/snapshots/webgit__render__blob__tests__blob_html_image_with_url.snap
---
source: src/render/blob.rs
expression: "render_with_url(\"docs/logo.png\", PNG, \"blob:fake-url\")"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="blob:fake-url" download="logo.png" class="blob-download">download</a>
</div>
<img src="blob:fake-url" alt="logo.png" class="blob-image">
