src/render/blob/snapshots/webgit__render__blob__tests__blob_html_line_range_selected.snap
---
source: src/render/blob/tests.rs
expression: "render_selection(\"src/main.rs\", b\"one\\ntwo\\nthree\\nfour\\nfive\\n\", None, false,\nSome(LineRange { start: 2, end: 4 }),)"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/blame/src/main.rs#n2-n4" class="blame-link">blame</a>
</div>
<table class="blob-table">
<tbody>
<tr id="n1">
<td class="lno">
<a href="#!/tree/src/main.rs#n1" data-n="1">1</a>
</td>
<td class="code">one</td>
</tr>
<tr id="n2" class="hl">
<td class="lno">
<a href="#!/tree/src/main.rs#n2" data-n="2">2</a>
</td>
<td class="code">two</td>
</tr>
<tr id="n3" class="hl">
<td class="lno">
<a href="#!/tree/src/main.rs#n3" data-n="3">3</a>
</td>
<td class="code">three</td>
</tr>
<tr id="n4" class="hl">
<td class="lno">
<a href="#!/tree/src/main.rs#n4" data-n="4">4</a>
</td>
<td class="code">four</td>
</tr>
<tr id="n5">
<td class="lno">
<a href="#!/tree/src/main.rs#n5" data-n="5">5</a>
</td>
<td class="code">five</td>
</tr>
</tbody>
</table>
