src/render/blob/snapshots/webgit__render__blob__tests__blob_html_too_many_bytes.snap
---
source: src/render/blob.rs
expression: "render(&vec![b'x'; MAX_BLOB_BYTES + 1])"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391</div>
<p class="msg">File too large to display (1048577 bytes, limit 1048576).</p>
